#hw09 Исправление ДЗ№9