@@ -4,11 +4,8 @@ import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.test.annotation.DirtiesContext;
-import ru.otus.hw.dto.AuthorDto;
-import ru.otus.hw.dto.BookDto;
-import ru.otus.hw.dto.GenreDto;
-import ru.otus.hw.models.Author;
-import ru.otus.hw.models.Genre;
+import ru.otus.hw.dto.*;
+import ru.otus.hw.exceptions.NotFoundException;
 
 import java.util.ArrayList;
 import java.util.Collections;
@@ -16,8 +13,7 @@ import java.util.List;
 import java.util.Optional;
 
 import static org.assertj.core.api.Assertions.assertThat;
-import static org.junit.jupiter.api.Assertions.assertFalse;
-import static org.junit.jupiter.api.Assertions.assertTrue;
+import static org.junit.jupiter.api.Assertions.*;
 
 @SpringBootTest
 @DirtiesContext(classMode = DirtiesContext.ClassMode.BEFORE_CLASS)
@@ -29,12 +25,11 @@ class BookServiceImplTest {
     @DirtiesContext(methodMode = DirtiesContext.MethodMode.BEFORE_METHOD)
     @Test
     void findById() {
-        BookDto expectedBook = new BookDto(1L, "BookTitle_1", new AuthorDto(1L, "Author_1"),
-                List.of(new GenreDto(1L, "Genre_1"), new GenreDto(2L, "Genre_2")));
-        Optional<BookDto> book = bookService.findById(1L);
-        assertTrue(book.isPresent());
-        assertTrue(book.get().getId() > 0);
-        assertThat(expectedBook).usingRecursiveComparison().isEqualTo(book.get());
+        BookDto expectedBook = new BookDto(1L, "BookTitle_1", new ItemDto(1L, "Author_1"),
+                List.of(new ItemDto(1L, "Genre_1"), new ItemDto(2L, "Genre_2")));
+        assertDoesNotThrow(() -> bookService.findById(1L));
+        BookDto bookDto = bookService.findById(1L);
+        assertThat(expectedBook).usingRecursiveComparison().isEqualTo(bookDto);
     }
 
     @Test
@@ -45,29 +40,29 @@ class BookServiceImplTest {
 
     @Test
     void create() {
-        BookDto expectedBook = new BookDto(5L, "TEST BOOK", new AuthorDto(1L, "Author_1"), Collections.emptyList());
-        BookDto book = bookService.create("TEST BOOK", 1L, new ArrayList<>());
-        assertTrue(book.getId() > 0); // и т.д.
+        BookSaveDto expectedBook = new BookSaveDto(5L, "TEST BOOK", new ItemDto(1L, "Author_1"), Collections.emptyList());
+        BookDto book = bookService.create(expectedBook);
         assertThat(expectedBook).usingRecursiveComparison().isEqualTo(book);
     }
 
     @DirtiesContext(methodMode = DirtiesContext.MethodMode.BEFORE_METHOD)
     @Test
     void update() {
-        BookDto expectedBook = new BookDto(1L, "TEST BOOK2", new AuthorDto(1L, "Author_1"), Collections.emptyList());
-        BookDto book = bookService.update(1L, "TEST BOOK2", 1L, new ArrayList<>());
-        assertThat(expectedBook).usingRecursiveComparison().isEqualTo(book);
+        BookSaveDto saveBookDto = new BookSaveDto(1L, "TEST BOOK2", new ItemDto(1L, "Author_1"),
+                List.of(1L, 2L));
+        BookDto book = bookService.update(saveBookDto);
+        BookDto expect = new BookDto(1L, "TEST BOOK2", new ItemDto(1L, "Author_1"),
+                List.of(new ItemDto(1L,  "Genre_1"), new ItemDto(2L, "Genre_2")));
+        assertThat(expect).usingRecursiveComparison().isEqualTo(book);
     }
 
     @Test
     void deleteById() {
 
-        Optional<BookDto> book = bookService.findById(1L);
-        assertTrue(book.isPresent());
+        assertDoesNotThrow(() -> bookService.findById(1L));
 
         bookService.deleteById(1L);
 
-        book = bookService.findById(1L);
-        assertTrue(book.isEmpty());
+        assertThrows(NotFoundException.class, () -> bookService.findById(1L));
     }
 }
